@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -14,7 +14,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.apache.nutch.parse.swf;
 
 import java.lang.invoke.MethodHandles;
@@ -246,7 +245,7 @@ class ExtractText extends SWFTagTypesImpl {
       int[] codes) throws IOException {
     // System.out.println("-defineFontInfo id=" + fontId + ", name=" +
     // fontName);
-    fontCodes.put(new Integer(fontId), codes);
+    fontCodes.put(Integer.valueOf(fontId), codes);
   }
 
   // XXX too much hassle for too little return ... we cannot guess character
@@ -263,7 +262,7 @@ class ExtractText extends SWFTagTypesImpl {
       int numGlyphs, int ascent, int descent, int leading, int[] codes,
       int[] advances, Rect[] bounds, int[] kernCodes1, int[] kernCodes2,
       int[] kernAdjustments) throws IOException {
-    fontCodes.put(new Integer(id), (codes != null) ? codes : new int[0]);
+    fontCodes.put(Integer.valueOf(id), (codes != null) ? codes : new int[0]);
 
     return null;
   }
